scripts/nullness/annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8.txt
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/Color.java:13: error: [method.invocation] call to setRed(float) not allowed on the given receiver.
		setRed(red);
		      ^
  found   : @UnderInitialization(fws.utility.Color.class) @NonNull Color
  required: @Initialized @NonNull Color
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/Color.java:14: error: [method.invocation] call to setGreen(float) not allowed on the given receiver.
		setGreen(green);
		        ^
  found   : @UnderInitialization(fws.utility.Color.class) @NonNull Color
  required: @Initialized @NonNull Color
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/Color.java:15: error: [method.invocation] call to setBlue(float) not allowed on the given receiver.
		setBlue(blue);
		       ^
  found   : @UnderInitialization(fws.utility.Color.class) @NonNull Color
  required: @Initialized @NonNull Color
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:57: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: T extends @Initialized @NonNull Cell
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/PlateType.java:14: error: [method.invocation] call to setElevation(float) not allowed on the given receiver.
		setElevation(elevation);
		            ^
  found   : @UnderInitialization @NonNull PlateType
  required: @Initialized @NonNull PlateType
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: map_, elevation_algo_, rainfall_algo_, temperature_algo_
	public WorldGenerationMap(MapType type, int width, int height)
	       ^
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:23: error: [initialization.fields.uninitialized] the constructor does not initialize fields: rainfall_
	public RainShadowAlgorithm(WorldGenerationMap map, float threshold, int distance, int recharge_distance_)
	       ^
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:77: error: [argument] incompatible argument for parameter state of StateMgr.add.
		state_mgr_.add(new ElevationState(this));
		               ^
  found   : @UnderInitialization(fws.worldeditor.ElevationState.class) @NonNull ElevationState
  required: @Initialized @NonNull State
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:77: error: [argument] incompatible argument for parameter editor of ElevationState constructor.
		state_mgr_.add(new ElevationState(this));
		                                  ^
  found   : @UnderInitialization(fws.worldeditor.WorldEditor.class) @NonNull WorldEditor
  required: @Initialized @NonNull WorldEditor
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:78: error: [argument] incompatible argument for parameter state of StateMgr.add.
		state_mgr_.add(new TemperatureState(this));
		               ^
  found   : @UnderInitialization(fws.worldeditor.TemperatureState.class) @NonNull TemperatureState
  required: @Initialized @NonNull State
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:78: error: [argument] incompatible argument for parameter editor of TemperatureState constructor.
		state_mgr_.add(new TemperatureState(this));
		                                    ^
  found   : @UnderInitialization(fws.worldeditor.WorldEditor.class) @NonNull WorldEditor
  required: @Initialized @NonNull WorldEditor
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:79: error: [argument] incompatible argument for parameter state of StateMgr.add.
		state_mgr_.add(new RainfallState(this));
		               ^
  found   : @UnderInitialization(fws.worldeditor.RainfallState.class) @NonNull RainfallState
  required: @Initialized @NonNull State
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/worldeditor/WorldEditor.java:79: error: [argument] incompatible argument for parameter editor of RainfallState constructor.
		state_mgr_.add(new RainfallState(this));
		                                 ^
  found   : @UnderInitialization(fws.worldeditor.WorldEditor.class) @NonNull WorldEditor
  required: @Initialized @NonNull WorldEditor
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
